# IgnoringComments

./: BrayanInput.txt  CMakeCache.txt  CMakeLists.txt  CommentIdentifierDFA.cpp  CommentIdentifierDFA.h  FileHandler.cpp  FileHandler.h  IgnoreComments  Makefile  StringIdentifierDFA.cpp  StringIdentifierDFA.h  Tokenizer.cpp  Tokenizer.hpp  cmake_install.cmake  main.cpp  myInput.txt  output.c  output.txt  programming_assignment_1-test_file_5.c  programming_assignment_1-test_file_6-comments_replaced_with_whitespace.c  readme.md
JordanVersion/: CMakeLists.txt  Makefile  ReadMe.md  aone  myapp
JordanVersion/_docs/: Diagram.drawio
JordanVersion/_obj/: CommentIdentifierDFA.d  FileHandler.d  StringIdentifierDFA.d  comment-detector.d  comment-remover.d  dfa.d  error-handler.d  main.d
JordanVersion/include/: CommentIdentifierDFA.h  FileHandler.h
JordanVersion/src/: CommentIdentifierDFA.cpp  FileHandler.cpp  StringIdentifierDFA.cpp  main.cpp
JordanVersion/tests/infiles/: test4.c  test7.c  test8.c
src/: CommentIdentifierDFA.h  main.cpp
